--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-tensorflow==2.12.0
 pandas
 dvc
-mlflow==2.2.2
+mlflow
 numpy 
-#notebook  #or use #conda install jupyter
+#notebook  
 matplotlib
 seaborn
 python-box==6.0.2
@@ -17,4 +16,5 @@ Flask
 Flask-Cors
 gdown
 python-box
+dagshub
 -e .
