--- a/dvc.yaml
+++ b/dvc.yaml
@@ -5,7 +5,7 @@ stages:
       - src/cnnClassifier/pipeline/stage_01_data_Ingestion.py
       - config/config.yaml
     outs:
-      - "artifacts/data_ingestion/demo kideny datset"  # Quoted to handle spaces
+      - "artifacts/data_ingestion/demo kideny dataset"  # Quoted to handle spaces
 
   prepare_base_model:
     cmd: python src/cnnClassifier/pipeline/stage_02_prepare_base_model.py
@@ -26,7 +26,7 @@ stages:
     deps:
       - src/cnnClassifier/pipeline/stage_03_model_training.py
       - config/config.yaml
-      - "artifacts/data_ingestion/demo kideny datset"  # Quoted to handle spaces
+      - "artifacts/data_ingestion/demo kideny dataset"  # Quoted to handle spaces
       - artifacts/prepare_base_model
     params:
       - IMAGE_SIZE
@@ -40,7 +40,7 @@ stages:
     cmd: python src/cnnClassifier/pipeline/stage_04_model_evaluation.py
     deps:
       - src/cnnClassifier/pipeline/stage_04_model_evaluation.py
-      - "artifacts/data_ingestion/demo kideny datset"  # Quoted to handle spaces
+      - "artifacts/data_ingestion/demo kideny dataset"  # Quoted to handle spaces
       - artifacts/training/model.keras
     params:
       - IMAGE_SIZE
